tests/miniJava/pos/001313_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( true ) while ( 0 ) { } } }
