tests/miniJava/neg/005750_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } true class java { }
